# zarr-cm

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/scripts/: check_upstream.py  check_upstream_schemas.py
.github/upstream-schemas/: clbarnes_zarr-convention-uom.json  sources.json  zarr-conventions_spatial.json
.github/workflows/: cd.yml  check-upstream.yml  ci.yml
docs/: api.md  index.md
docs/superpowers/plans/: 2026-06-11-convention-revisions.md  2026-06-11-revision-contract.md  2026-06-16-examples-and-detect.md  2026-06-16-track-v0.1.md
docs/superpowers/specs/: 2026-06-11-convention-revisions-design.md  2026-06-11-revision-contract-design.md  2026-06-16-examples-and-detect-design.md  2026-06-16-track-v0.1-design.md
examples/: license.py  multiscales.py  proj.py  spatial.py  uom.py
src/zarr_cm/: __init__.py  _contract.py  _core.py  _json_alias.py  geo_proj.py  license.py  multiscales.py  spatial.py  uom.py
src/zarr_cm/multiscales/: __init__.py  _r1.py  _r2.py
src/zarr_cm/proj/: __init__.py  _r1.py  _r2.py  _r3.py
src/zarr_cm/pydantic/: __init__.py  _base.py  _multi.py  geo_proj.py  license.py  multiscales.py  spatial.py  uom.py
src/zarr_cm/spatial/: __init__.py  _r1.py  _r2.py  _r3.py
tests/: conftest.py  test_contract.py  test_core_detect.py  test_core_json.py  test_detect.py  test_docs.py  test_examples.py  test_geo_proj.py  test_license.py  test_multi.py  test_multiscales.py  test_package.py  test_proj.py  test_pydantic.py  test_revisions.py  test_spatial.py  test_typing.py  test_uom.py
tests/schemas/: geo-proj.json  license.json  multiscales-r2.json  multiscales.json  uom.json
tests/test_pydantic/: test_base.py  test_geo_proj.py  test_license.py  test_multi.py  test_multiscales.py  test_packaging.py  test_spatial.py  test_uom.py
