[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "zarr-cm"
authors = [
  { name = "Davis Bennett", email = "davis.v.bennett@gmail.com" },
]
description = "Python implementation of Zarr Conventions Metadata"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  # PEP 728 ``extra_items`` on TypedDicts is not in any released CPython stdlib
  # yet; typing_extensions provides it at runtime for all supported versions.
  "typing_extensions>=4.13",
]

[project.urls]
Homepage = "https://github.com/zarr-conventions/zarr-cm"
"Bug Tracker" = "https://github.com/zarr-conventions/zarr-cm/issues"
Discussions = "https://github.com/zarr-conventions/zarr-cm/discussions"
Changelog = "https://github.com/zarr-conventions/zarr-cm/releases"


[dependency-groups]
test = [
  # Pinned to the 9.0.x series: pytest 9.1 has a regression that breaks
  # collection of parametrize-over-generator (see test_docs.py / find_examples).
  "pytest >=9,<9.1",
  "pytest-cov >=7",
  "pytest-examples >=0.0.14",
  "jsonschema >=4",
]
typecheck = [
  "pyright >=1.1.386",
  "types-jsonschema",
]
dev = [
  { include-group = "test" },
  { include-group = "typecheck" },
]
docs = [
    "markdown>=3.9",
    "mdx-include>=1.4.2",
    "mkdocs-material>=9.1.19",
    "mkdocs>=1.1.2",
    "mkdocstrings-python>=1.18.2",
    "pyyaml>=6.0.1",
]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/zarr_cm/_version.py"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]
env-vars.PYTHONWARNDEFAULTENCODING = "1"


[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["zarr_cm"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportPrivateUsage = false
# PEP 728 ``extra_items`` on TypedDicts is provisional in pyright and gated
# behind this flag. It is what lets the convention TypedDicts be treated as
# JSON objects (assignable to ``Mapping[str, JsonValue]``).
enableExperimentalFeatures = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  # We import TypedDict/NotRequired from typing_extensions (not typing) because
  # PEP 728 `extra_items=` is only available there until it lands in the stdlib.
  "UP035",    # Import from `typing` instead
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["zarr_cm._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"docs/examples/**" = ["T20"]
"examples/**" = ["T20"]
".github/scripts/**" = ["T20"]


[tool.pylint]
py-version = "3.11"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "duplicate-code",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
